# aurum

./: .env.example  .gitignore  CLAUDE.md  README.md  README.zh-CN.md  config.yaml  factor_config.yaml  factor_loop.py  loop.py  portfolio.py  program.md  program_factor.md  program_meanrev.md  publish_signal.py  pyproject.toml  validate.py  validate_optimizations.py  validate_optimizations_v2.py
docs/: aurum-volta-integration.md  progress-report.md  spec.md
experiments/: factor_results.tsv
factors/: __init__.py  base_defensive_score.py  base_ma_filter.py  base_market_regime.py  base_offensive_score.py  evolved_013_offensive_return_skewness.py  evolved_015_regime_momentum_exhaustion.py  evolved_016_offensive_vol_term_structure.py  evolved_020_cross_asset_tlt_leading_signal.py  evolved_020_offensive_trend_consistency.py  evolved_022_yield_curve_regime.py  evolved_024_defensive_relative_strength_ra.py  evolved_025_offensive_momentum_rank_stabil.py  evolved_027_defensive_hierarchy_stability.py  evolved_029_defensive_volume_flow.py  evolved_036_correlation_velocity_regime.py  evolved_037_offensive_volatility_asymmetry.py  evolved_038_evolved_037_offensive_rank_sta.py  evolved_039_defensive_rotation_velocity_re.py  evolved_040_offensive_volume_confirmation.py  evolved_041_intraday_vol_structure_regime.py  evolved_041_offensive_volume_confirmation.py  evolved_042_evolved_040_offensive_volume_c.py  evolved_043_evolved_043_offensive_return_d.py  evolved_044_evolved_043_defensive_vol_rati.py  evolved_047_defensive_stress_performance.py  evolved_048_defensive_drawdown_capacity.py  (+3 more)
(+10 files in other folders)
